@@ -1,2 +1,4 @@
 # mavenQualityControlDemo
 Unit testing, Mutation testing, reporting
+
+MUST INCREASE JVM HEAP SIZE USE VM ARGS WHEN RUNNING THE NIGHTLY BUILD: [ -Xms512m -Xmx1152m -XX:MaxPermSize=256m -XX:MaxNewSize=256m ]
